--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 /* =========================================================================
-S GENERAUX
+   GENERAUX
    ========================================================================= */
 
    @import url('https://fonts.googleapis.com/css2?family=Karla&family=Kumbh+Sans&family=Italianno&display=swap');
